--- a/notesapp-frontend/package.json
+++ b/notesapp-frontend/package.json
@@ -16,6 +16,9 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
   },
+  "engines": {
+    "node": ">=20.19.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
